fix gpu support

--- a/scripts/data-generator/requirements.txt
+++ b/scripts/data-generator/requirements.txt
@@ -2,7 +2,7 @@ you-get>=0.4.1650
 easyocr>=1.7.1
 opencv-python>=4.8.0
 numpy>=1.24.0
-torch>=2.0.0+cu118
-torchvision>=0.15.0+cu118
-torchaudio>=2.0.0+cu118
---extra-index-url https://download.pytorch.org/whl/cu118 
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0 
